--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,15 +38,23 @@ flutter:
     - assets/icons/
     - assets/images/intro_images/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Cairo
+      fonts:
+        - asset: assets/fonts/cairo/Cairo_200.ttf
+          weight: 200
+        - asset: assets/fonts/cairo/Cairo_300.ttf
+          weight: 300
+        - asset: assets/fonts/cairo/Cairo_400.ttf
+          weight: 400
+        - asset: assets/fonts/cairo/Cairo_500.ttf
+          weight: 500
+        - asset: assets/fonts/cairo/Cairo_600.ttf
+          weight: 600
+        - asset: assets/fonts/cairo/Cairo_700.ttf
+          weight: 700
+        - asset: assets/fonts/cairo/Cairo_800.ttf
+          weight: 800
+        - asset: assets/fonts/cairo/Cairo_900.ttf
+          weight: 900
+
