--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_svg: ^1.1.6
   animated_splash_screen: ^1.3.0
   smooth_page_indicator: ^1.0.0+2
+  image_picker: ^0.8.6+1
 
 dev_dependencies:
   flutter_test:
