--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   smooth_page_indicator: ^1.0.0+2
   image_picker: ^0.8.6+1
+  pin_code_fields: ^7.4.0
 
 dev_dependencies:
   flutter_test:
