--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   image_picker: ^0.8.6+1
   pin_code_fields: ^7.4.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
