--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   image_picker: ^0.8.6+1
   pin_code_fields: ^7.4.0
   flutter_rating_bar: ^4.0.1
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
