--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   pin_code_fields: ^7.4.0
   flutter_rating_bar: ^4.0.1
   flutter_switch: ^0.3.2
+  mobile_scanner: ^2.1.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
